Fix big hero alignment, add cursor pointer, minor styling fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -98,6 +98,7 @@ button {
     font-size: 20px;
     will-change: opacity;
     color: white;
+    cursor: pointer;
     border: none;
     outline: none;
 }
