--- a/src/styles/sections/community-first.scss
+++ b/src/styles/sections/community-first.scss
@@ -24,7 +24,8 @@
         color: $color-white;
         width: 100%;
         a {
-            color: $color-black;
+            color: $color-white;
+            text-decoration: underline;
         }
     }
 
